@@ -1,6 +1,6 @@
 # Java UNO Game
-
-A fully functional UNO card game built in **Java** with a **JavaFX** interface.  
+## Project Overview
+A semi functional UNO card game built in **Java** with a **JavaFX** interface.  
 It was originally developed as a **group project**, and while the core functionality is complete, it remains a **work in progress** with ongoing improvements focused on multiplayer support.
 
 ---
@@ -11,10 +11,6 @@ It was originally developed as a **group project**, and while the core functiona
   - Human vs. Computer opponents
   - AI players with basic strategy
   - Support for up to 10 players
-- **Multiplayer**
-  - Play with friends over a network
-  - Server-client system using Java sockets
-  - Turn handling and card distribution synced across clients
 - **Game Logic**
   - Full implementation of UNO rules (reverse, skip, draw, wild cards, etc.)
   - Turn order and direction tracking
@@ -24,14 +20,7 @@ It was originally developed as a **group project**, and while the core functiona
   - Displays your hand of cards, other players’ card counts, and turn indicators
   - Menus for New Game, Save, Load, Options, and Rules
 - **Customization**
-  - Multiple card themes (e.g., Classic, City, Jungle, Space)
-  - Color themes for the UI
-  - Customizable key bindings
-- **Persistence**
-  - Save and load games from disk
-  - Manage saved games with a custom load/delete window
-
----
+  - Code structured to allow future customization (e.g., multiple card themes, colors, and styles) — not implemented yet, but designed with expansion in mind
 
 ## Technologies Used
 
@@ -39,8 +28,6 @@ It was originally developed as a **group project**, and while the core functiona
 - **JavaFX** — User interface and game rendering
 - **Object-Oriented Design** — Flexible class hierarchy for cards, decks, and players
 - **Sockets/Multithreading** — Networking and multiplayer functionality
-
----
 
 ## Project Structure
 
@@ -50,17 +37,28 @@ It was originally developed as a **group project**, and while the core functiona
 - `Menu` and UI Classes — JavaFX-based menus and overlays
 - `Multiplayer` — Networking code for server and client connections
 
+## Setup
+
+1. Install Java 17+ and the JavaFX SDK.
+
+2. Clone this repository.
+
+3. Open the project in your preferred IDE (IntelliJ, Eclipse, NetBeans).
+
+4. Add the following VM options in your Run/Debug configuration:
+   - --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml,javafx.media
+
+6. Run the main class to start the application.
+
+## Possible Improvements
+I coded the majority of this project myself, and if I were to revisit it, several areas could be improved:
+
+- Refactoring for SOLID principles: While I aimed to follow SOLID, there are clear violations. Some packages and classes would benefit from restructuring, and certain code should be extracted into interfaces to better support dependency inversion.
+
+- Client/Server architecture: The networking code was rushed, and much of it could be refactored into smaller methods to better follow the Single Responsibility Principle.
+
+- Exception handling: There are still some handled exceptions being thrown occasionally in the server class that would need investigation.
+
+Overall, this application isn’t highly polished, but it was a valuable learning experience. The key takeaway for me is how I can apply what I’ve learned here to future projects.
+
 ---
-
-## Getting Started
-
-### 1. Prerequisites
-Before running the project, make sure you have:
-- **Java JDK 17+** installed ([Download here](https://adoptium.net/) if needed).  
-- **JavaFX SDK** installed ([Download here](https://openjfx.io/)).  
-- An IDE such as **IntelliJ IDEA**, **Eclipse**, or **NetBeans**.  
-
-### 2. Clone the Repository
-```bash
-git clone https://github.com/your-username/java-uno-game.git
-cd java-uno-game
